--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "devDependencies": {
+    "ansi-colors": "^4.1.3",
+    "browser-sync": "^3.0.2",
     "css-loader": "^7.1.2",
+    "fancy-log": "^2.0.0",
+    "file-loader": "^6.2.0",
     "gulp": "^5.0.0",
     "gulp-clean": "^0.4.0",
-    "gulp-concat": "^2.6.1",
     "gulp-file-include": "^2.3.0",
-    "gulp-group-css-media-queries": "^1.2.2",
-    "gulp-notify": "^4.0.0",
+    "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
-    "gulp-sass": "^5.1.0",
+    "gulp-sass": "^5.0.0",
     "gulp-server-livereload": "^1.9.2",
     "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify": "^3.0.2",
-    "sass": "^1.77.6",
+    "gulp-terser": "^2.1.0",
+    "plugin-error": "^2.0.1",
+    "replace-ext": "^2.0.0",
+    "sass": "^1.26.3",
+    "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
-    "webpack-stream": "^7.0.0"
+    "webpack-stream": "^6.1.2"
   }
 }
